--- a/src/screens/profile/profile.css
+++ b/src/screens/profile/profile.css
@@ -1,51 +1,177 @@
 header {
     background-color: #fff;
+    height: 88px;
+    display: flex;
+    align-items: center;
 }
 
 header .title {
     display: flex;
-    padding: 1em;
 }
 
 header .title-search {
     color: #0069CA;
     margin: 0;
-    font-size: 25px;
+    font-size: 32px;
     font-family: "Nunito";
+    font-weight: 700;
 }
 
 header .title-devs {
     color: #8C19D2;
     margin: 0;
-    font-size: 25px;
+    font-size: 32px;
+    font-family: "Nunito";
+    font-weight: 700;
 }
 
-.main-profile{
-    margin: 0;
+header .input-search {
+    display: flex;
+    width: 590px;
+    height: 48px;
+    align-items: center;
+    border: 2px solid #e2e8f0;
+    border-radius: 6px;
+}
+
+header .input-search:hover {
+    border: #8C19D2 2px solid;
+}
+
+.input-search .material-icons.search-icon {
+    margin-right: 8px;
+    margin-left: 8px;
+    color: #e2e8f0;
+}
+
+.input-search input {
+    flex: 1;
+    border: none;
+    outline: none;
+    padding: 0;
+    font-size: 16px;
+    font-family: "Inter";
+}
+
+.main-profile {
     width: 100%;
-    height: 100vw;
-    background-color:#f2f2f2;
+    height: 80vh;
+    background-color: #FCFCFC;
+    display: flex;
+    flex-direction: row;
 }
 
-.content-cards{
-    display: flex;
-    gap: 1em;
-    margin: 0em 3em 0 3em
-}
 .card-profile {
-    display: flex;
-    flex-direction: column;
-    margin-top: 2em;
-    width: 27%;
-    margin: 1em 0 1em 0;
-    background-color: #FFFF;
-  }
-
-  .card-repository {
-    display: flex;
-    flex-direction: column;
-    margin-top: 2em;
-    width: 70%;
-    margin: 1em 0 1em 0;
     background-color: #fff;
-  }
+    width: 27%;
+    margin: 1em;
+    padding: 0 1em 0em 1em;
+}
+
+.header-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    gap: 1em;
+}
+
+.header-card img {
+    margin: 0;
+}
+
+.title-card-profile {
+    margin: 0
+}
+
+.text-title h1 {
+    white-space: nowrap;
+    font-size: 20px;
+    color: #171923;
+    font-weight: 700;
+    line-height: 24px;
+    font-family: 'Inter';
+}
+
+.tex-subtitle h5 {
+    color: #A0AEC0;
+    font-weight: 400;
+    line-height: 21px;
+    font-family: 'Inter';
+}
+
+.content-card p {
+    color: #4A5568;
+    font-size: 16px;
+    line-height: 24px;
+    font-family: 'Inter';
+    font-weight: 400;
+    margin-bottom: 1em;
+}
+
+.profile-labels {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: .5em;
+    margin-bottom: .5em;
+}
+
+.profile-labels span {
+    margin: 0;
+    white-space: nowrap;
+    font-size: 14px;
+    font-family: 'Inter';
+    line-height: 21px;
+    font-weight: 400;
+}
+
+.profile-labels a {
+    margin: 0;
+    white-space: nowrap;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+}
+
+.profile-labels .material-icons {
+    color: #4A5568;
+    margin: 0;
+}
+
+.card-repository {
+    background-color: #fff;
+    width: 70%;
+    margin: 1em;
+    padding: 0 1em 0em 1em;
+}
+
+.card-content-repository {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    margin-top: .8em;
+    gap: 1em;
+}
+
+.card-content-repository a {
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    text-decoration: none;
+    color: #171923;
+    font-weight: 700;
+    line-height: 24px;
+    font-family: 'Inter';
+}
+
+.card-content-repository p {
+    margin: 0;
+    font-size: 16px;
+    color: #4A5568;
+    font-weight: 400;
+    line-height: 24px;
+    font-family: 'Inter';
+}
