--- a/src/screens/profile/profile.css
+++ b/src/screens/profile/profile.css
@@ -25,34 +25,6 @@ header .title-devs {
     font-weight: 700;
 }
 
-header .input-search {
-    display: flex;
-    width: 590px;
-    height: 48px;
-    align-items: center;
-    border: 2px solid #e2e8f0;
-    border-radius: 6px;
-}
-
-header .input-search:hover {
-    border: #8C19D2 2px solid;
-}
-
-.input-search .material-icons.search-icon {
-    margin-right: 8px;
-    margin-left: 8px;
-    color: #e2e8f0;
-}
-
-.input-search input {
-    flex: 1;
-    border: none;
-    outline: none;
-    padding: 0;
-    font-size: 16px;
-    font-family: "Inter";
-}
-
 .main-profile {
     width: 100%;
     height: 80vh;
@@ -135,7 +107,7 @@ header .input-search:hover {
     white-space: nowrap;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 28px;
 }
 
@@ -149,6 +121,7 @@ header .input-search:hover {
     width: 70%;
     margin: 1em;
     padding: 0 1em 0em 1em;
+    overflow: auto;
 }
 
 .card-content-repository {
@@ -178,3 +151,82 @@ header .input-search:hover {
     line-height: 24px;
     font-family: 'Inter';
 }
+
+.star {
+    display: flex;
+    align-items: center;
+    gap: .5em;
+    margin-left: 0;
+}
+
+.start span {
+    background-color: red;
+    font-family: "Inter";
+    font-weight: 400;
+    line-height: 21px;
+    font-size: 14px;
+}
+
+.update{
+    font-family: "Inter";
+    font-weight: 400;
+    line-height: 21px;
+    font-size: 14px;
+}
+
+
+.line {
+    width: 100%;
+    border: 1px solid #e2e8f0;
+}
+
+
+.btn-contact{
+    display: flex;
+    justify-content: center;
+    margin: 4em 0 ;
+  }
+  
+  .btn-contact a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    text-decoration: none;
+    width: 70%;
+    height: 2.3em;
+    background-color: #8C19D2;
+    color: white;
+    margin: 0;
+    padding: 10px, 24px, 10px, 24px;
+    gap: 8px;
+    border-radius: 6px;
+    font-family: "Inter";
+    line-height: 28px;
+    font-weight: 600;
+  }
+  
+  .btn-contact a:hover{
+    background-color: #a36bc6;
+  }
+
+  .btn-back button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: red;
+    color: white;
+    margin: 0;
+    padding: 10px, 24px, 10px, 24px;
+    gap: 8px;
+    border-radius: 6px;
+    font-family: "Inter";
+    line-height: 28px;
+    font-weight: 600;
+    border: 1px solid transparent;
+  }
+  
+  .btn-back button:hover{
+    background-color: rgb(197, 74, 74);
+  }
