--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -98,4 +98,25 @@
     font-size: 16px;
     font-family: "Inter";
  }
+
+ /* responsividade  */
+ @media (max-width: 912px) {
+   .main-home{
+     gap: 0;
+   }
+   .title-search{
+     font-size: 40px;
+   }
+   .title-devs{
+     font-size: 40px;
+   }
+   .container{
+     display: flex;
+     flex-direction: column;
+     margin: 0;
+   }
+   .input-container{
+     width: max-content;
+   }
+ }
  
